# geo_view

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
docker/scripts/: import.sh  process-locations.sh
geo_view/: admin.py  asgi.py  lenta.py  models.py  settings.py  urls.py  views.py  wsgi.py
geo_view/management/commands/: import_news.py  process_locations.py
geo_view/migrations/: 0001_initial.py  0002_alter_article_date.py
geo_view/templates/: base.html  common.html  coords.html  map.html  search.html
